fix: fixed text too long in Mobile

--- a/src/assets/styles/_mixin.scss
+++ b/src/assets/styles/_mixin.scss
@@ -8,7 +8,6 @@
   color: $color;
   font-size: $fontSize;
   line-height: $lineHeight;
-  white-space: nowrap;
 }
 
 @mixin widthHeight($width: 100%, $height: 100%) {
